--- a/scripts.html
+++ b/scripts.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -199,14 +200,13 @@
         </div>
     </main>
 
-    <footer>
+    <footer style="position: fixed; bottom: 0; width: 100%; background: rgba(15, 15, 15, 0.9); padding: 1rem 0; border-top: 1px solid #333;">
         <div class="container">
             <div class="footer-links">
                 <a href="#">Discord Server</a>
                 <a href="#">Script Hub</a>
                 <a href="#">Support</a>
             </div>
-            <div class="copyright">© 2025 Kaotik Softworks. All rights reserved.</div>
         </div>
     </footer>
 
