--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div class="container">
             <div class="footer-links">
                 <a href="#">Discord Server</a>
-                <a href="#">Script Hub</a>
+                <a href="scripts">Scripts</a>
                 <a href="#">Support</a>
             </div>
         </div>
