--- a/index.html
+++ b/index.html
@@ -231,9 +231,9 @@
         <nav class="container">
             <div class="logo">KAOTIK SOFTWORKS</div>
             <ul class="nav-links">
-                <li><a href="#home">Home</a></li>
-                <li><a href="#scripts">Scripts</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="scripts">Scripts</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -244,8 +244,8 @@
                 <h1>KAOTIK SOFTWORKS</h1>
                 <p>The Best Fully Open Source scripts.</p>
                 <div class="cta-buttons">
-                    <a href="#" class="cta-button">Get Scripts</a>
-                    <a href="#" class="cta-button secondary">Join Discord</a>
+                    <a href="scripts" class="cta-button">Get Scripts</a>
+                    <a href="https://dsc.gg/kaotiksoftworks" class="cta-button secondary">Join Discord</a>
                 </div>
                 
                 <div class="features-list" style="margin-top: 3rem;">
@@ -267,7 +267,7 @@
     <footer style="position: fixed; bottom: 0; width: 100%; background: rgba(15, 15, 15, 0.9); padding: 1rem 0; border-top: 1px solid #333;">
         <div class="container">
             <div class="footer-links">
-                <a href="#">Discord Server</a>
+                <a href="https://dsc.gg/kaotiksoftworks">Discord Server</a>
                 <a href="scripts">Scripts</a>
                 <a href="#">Support</a>
             </div>
