--- a/scripts.html
+++ b/scripts.html
@@ -203,9 +203,9 @@
     <footer style="position: fixed; bottom: 0; width: 100%; background: rgba(15, 15, 15, 0.9); padding: 1rem 0; border-top: 1px solid #333;">
         <div class="container">
             <div class="footer-links">
-                <a href="#">Discord Server</a>
-                <a href="#">Script Hub</a>
-                <a href="#">Support</a>
+                <a href="https://dsc.gg/kaotiksoftworks">Discord Server</a>
+                <a href="scripts">Scripts</a>
+                <a href="contact">Support</a>
             </div>
         </div>
     </footer>
