--- a/scripts.html
+++ b/scripts.html
@@ -177,9 +177,9 @@
         <nav class="container">
             <div class="logo">KAOTIK SOFTWORKS</div>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Scripts</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="https://kaotiksoftworks.xyz">Home</a></li>
+                <li><a href="scripts">Scripts</a></li>
+                <li><a href="contact">Contact</a></li>
             </ul>
         </nav>
     </header>
