--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
         <nav class="container">
             <div class="logo">KAOTIK SOFTWORKS</div>
             <ul class="nav-links">
-                <li><a href="">Home</a></li>
+                <li><a href="https://kaotiksoftworks.xyz">Home</a></li>
                 <li><a href="scripts">Scripts</a></li>
                 <li><a href="contact">Contact</a></li>
             </ul>
